welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: reassignment to val
   if (getCouleurSol = Color.green)
                     ^